Fix textarea on Firefox
also move navbar back to top if window is resized

--- a/src/html/style.css
+++ b/src/html/style.css
@@ -315,6 +315,7 @@ label.ffInput input:checked ~ .checkmark:after {
 textarea.ffInput {
   max-width: 733px;
   width: -webkit-fill-available;
+  width: -moz-available;
   height: 80px;
   resize: vertical;
   transition: all 0.15s linear, background 1s linear;
